task: update build.gradle and move Launcher